--- a/src/assets/styles/base/reset.css
+++ b/src/assets/styles/base/reset.css
@@ -8,7 +8,6 @@
 
 html {
   -webkit-text-size-adjust: 100%;
-  overflow-x: hidden;
   scroll-behavior: smooth;
 }
 
